# rafaelmc.net

./: .envrc  Caddyfile  Dockerfile  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: deploy.yml  main.yml
.kamal/: secrets
config/: deploy.yml
main/: __init__.py  blog.py  main.py
main/static/css/: style.css
main/templates/: base.html
main/templates/blog/: index.html  post.html  posts.html
main/templates/main/: index.html
posts/: 0001_a_new_future_dead_blog.md  0002_deploying_django_with_static_files_using_docker_and_nginx_proxy.md  0003_kamal_v2_is_awesome.md  0004_how_to_upgrade_your_BIOS_on_an_Asus_motherboard_without_a_compatible_CPU.md  0005_what_should_i_test_cascade_testing_method.md  0006_the_joy_of_making_things_from_scratch.md  LICENSE
