[project]
name = "rafaelmc-net"
version = "0.1.0"
description = "rafaelmc.net website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedgenerator>=2.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
]

[dependency-groups]
dev = [
    "djlint>=1.36.1",
    "ipython>=8.29.0",
]
