[project]
name = "rafaelmc-net"
version = "0.1.0"
description = "rafaelmc.net website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedgenerator>=2.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "simplejson>=3.19.3",
]

[dependency-groups]
dev = [
    "djlint>=1.36.1",
    "ipython>=8.29.0",
]
[tool.ruff]
exclude = [".venv", "uv.lock"]
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
